changed plugins in pom.xml